tests/dataset/tpc-ds/compiler/cpp/q21.error
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:74:8: error: redefinition of ‘struct Inventory’
   74 | struct Inventory {
      |        ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:56:8: note: previous definition of ‘struct Inventory’
   56 | struct Inventory {
      |        ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:80:8: error: redefinition of ‘struct Warehouse’
   80 | struct Warehouse {
      |        ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:62:8: note: previous definition of ‘struct Warehouse’
   62 | struct Warehouse {
      |        ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:84:8: error: redefinition of ‘struct Item’
   84 | struct Item {
      |        ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:66:8: note: previous definition of ‘struct Item’
   66 | struct Item {
      |        ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:88:8: error: redefinition of ‘struct DateDim’
   88 | struct DateDim {
      |        ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:70:8: note: previous definition of ‘struct DateDim’
   70 | struct DateDim {
      |        ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:93:12: error: ‘inv’ was not declared in this scope; did you mean ‘int’?
   93 |   decltype(inv.inv_warehouse_sk) w;
      |            ^~~
      |            int
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:93:12: error: ‘inv’ was not declared in this scope; did you mean ‘int’?
   93 |   decltype(inv.inv_warehouse_sk) w;
      |            ^~~
      |            int
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:94:12: error: ‘inv’ was not declared in this scope; did you mean ‘int’?
   94 |   decltype(inv.inv_item_sk) i;
      |            ^~~
      |            int
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:94:12: error: ‘inv’ was not declared in this scope; did you mean ‘int’?
   94 |   decltype(inv.inv_item_sk) i;
      |            ^~~
      |            int
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:97:12: error: ‘inv’ was not declared in this scope; did you mean ‘int’?
   97 |   decltype(inv) inv;
      |            ^~~
      |            int
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:97:12: error: ‘inv’ was not declared in this scope; did you mean ‘int’?
   97 |   decltype(inv) inv;
      |            ^~~
      |            int
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:98:12: error: ‘d’ was not declared in this scope
   98 |   decltype(d) d;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:98:12: error: ‘d’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:109:8: error: redefinition of ‘struct __struct6’
  109 | struct __struct6 {
      |        ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:96:8: note: previous definition of ‘struct __struct6’
   96 | struct __struct6 {
      |        ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:118:12: error: ‘w’ was not declared in this scope
  118 |   decltype(w.w_warehouse_name) w_name;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:118:12: error: ‘w’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:119:12: error: ‘it’ was not declared in this scope; did you mean ‘int’?
  119 |   decltype(it.i_item_id) i_id;
      |            ^~
      |            int
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:119:12: error: ‘it’ was not declared in this scope; did you mean ‘int’?
  119 |   decltype(it.i_item_id) i_id;
      |            ^~
      |            int
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:120:38: error: ‘struct __struct6’ has no member named ‘qty’
  120 |   decltype(std::declval<__struct6>().qty) before_qty;
      |                                      ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:120:38: error: ‘struct __struct6’ has no member named ‘qty’
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:121:38: error: ‘struct __struct6’ has no member named ‘qty’
  121 |   decltype(std::declval<__struct6>().qty) after_qty;
      |                                      ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:121:38: error: ‘struct __struct6’ has no member named ‘qty’
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:122:39: error: ‘struct __struct6’ has no member named ‘qty’
  122 |   decltype((std::declval<__struct6>().qty /
      |                                       ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:123:39: error: ‘struct __struct6’ has no member named ‘qty’
  123 |             std::declval<__struct6>().qty)) ratio;
      |                                       ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:122:39: error: ‘struct __struct6’ has no member named ‘qty’
  122 |   decltype((std::declval<__struct6>().qty /
      |                                       ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:123:39: error: ‘struct __struct6’ has no member named ‘qty’
  123 |             std::declval<__struct6>().qty)) ratio;
      |                                       ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:201:13: error: redefinition of ‘void __json(const DateDim&)’
  201 | inline void __json(const DateDim &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:131:13: note: ‘void __json(const DateDim&)’ previously defined here
  131 | inline void __json(const DateDim &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:216:13: error: redefinition of ‘void __json(const Item&)’
  216 | inline void __json(const Item &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:171:13: note: ‘void __json(const Item&)’ previously defined here
  171 | inline void __json(const Item &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:231:13: error: redefinition of ‘void __json(const Inventory&)’
  231 | inline void __json(const Inventory &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:146:13: note: ‘void __json(const Inventory&)’ previously defined here
  146 | inline void __json(const Inventory &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:361:13: error: redefinition of ‘void __json(const Warehouse&)’
  361 | inline void __json(const Warehouse &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:186:13: note: ‘void __json(const Warehouse&)’ previously defined here
  186 | inline void __json(const Warehouse &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:397:23: error: no match for ‘operator==’ (operand types are ‘Before’ and ‘Before’)
  397 |           if (__g.key == __key) {
      |               ~~~~~~~ ^~ ~~~~~
      |                   |      |
      |                   Before Before
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:398:43: error: cannot convert ‘Inventory’ to ‘int’ in initialization
  398 |             __g.items.push_back(__struct6{inv, d});
      |                                           ^~~
      |                                           |
      |                                           Inventory
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:405:65: error: cannot convert ‘Inventory’ to ‘int’ in initialization
  405 |               __struct7{__key, std::vector<__struct6>{__struct6{inv, d}}});
      |                                                                 ^~~
      |                                                                 |
      |                                                                 Inventory
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:405:72: error: no matching function for call to ‘std::vector<__struct6>::vector(<brace-enclosed initializer list>)’
  405 |               __struct7{__key, std::vector<__struct6>{__struct6{inv, d}}});
      |                                                                        ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:9:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; std::__type_identity_t<_Alloc> = std::allocator<__struct6>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; std::__type_identity_t<_Alloc> = std::allocator<__struct6>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; size_type = long unsigned int; value_type = std::vector<__struct6>::value_type; allocator_type = std::allocator<__struct6>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; size_type = long unsigned int; allocator_type = std::allocator<__struct6>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:416:52: error: ‘struct __struct6’ has no member named ‘inv_quantity_on_hand’
  416 |                 decltype(std::declval<__struct6>().inv_quantity_on_hand)>
      |                                                    ^~~~~~~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:416:52: error: ‘struct __struct6’ has no member named ‘inv_quantity_on_hand’
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:416:73: error: template argument 1 is invalid
  416 |                 decltype(std::declval<__struct6>().inv_quantity_on_hand)>
      |                                                                         ^
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:416:73: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:419:23: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  419 |               __items.push_back(x.inv_quantity_on_hand);
      |                       ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:419:35: error: ‘struct __struct6’ has no member named ‘inv_quantity_on_hand’
  419 |               __items.push_back(x.inv_quantity_on_hand);
      |                                   ^~~~~~~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:414:13:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:413:38: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  413 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                    ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:413:49: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  413 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                               ~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:425:5: error: conversion from ‘vector<__struct8>’ to non-scalar type ‘vector<__struct6>’ requested
  386 |   std::vector<__struct6> before = ([&]() {
      |                                   ~~~~~~~~
  387 |     std::vector<__struct7> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  388 |     for (auto inv : inventory) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  389 |       for (auto d : date_dim) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~
  390 |         if (!((inv.inv_date_sk == d.d_date_sk)))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  391 |           continue;
      |           ~~~~~~~~~
  392 |         if (!((d.d_date < std::string("2000-03-15"))))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  393 |           continue;
      |           ~~~~~~~~~
  394 |         auto __key = Before{inv.inv_warehouse_sk, inv.inv_item_sk};
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  395 |         bool __found = false;
      |         ~~~~~~~~~~~~~~~~~~~~~
  396 |         for (auto &__g : __groups) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  397 |           if (__g.key == __key) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~
  398 |             __g.items.push_back(__struct6{inv, d});
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  399 |             __found = true;
      |             ~~~~~~~~~~~~~~~
  400 |             break;
      |             ~~~~~~
  401 |           }
      |           ~
  402 |         }
      |         ~
  403 |         if (!__found) {
      |         ~~~~~~~~~~~~~~~
  404 |           __groups.push_back(
      |           ~~~~~~~~~~~~~~~~~~~
  405 |               __struct7{__key, std::vector<__struct6>{__struct6{inv, d}}});
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  406 |         }
      |         ~
  407 |       }
      |       ~
  408 |     }
      |     ~
  409 |     std::vector<__struct8> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  410 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  411 |       __items.push_back(__struct8{
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  412 |           g.key.w, g.key.i, ([&](auto v) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  413 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  414 |           })(([&]() {
      |           ~~~~~~~~~~~
  415 |             std::vector<
      |             ~~~~~~~~~~~~
  416 |                 decltype(std::declval<__struct6>().inv_quantity_on_hand)>
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  417 |                 __items;
      |                 ~~~~~~~~
  418 |             for (auto x : g.items) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~
  419 |               __items.push_back(x.inv_quantity_on_hand);
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  420 |             }
      |             ~
  421 |             return __items;
      |             ~~~~~~~~~~~~~~~
  422 |           })())});
      |           ~~~~~~~~
  423 |     }
      |     ~
  424 |     return __items;
      |     ~~~~~~~~~~~~~~~
  425 |   })();
      |   ~~^~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:437:23: error: no match for ‘operator==’ (operand types are ‘Before’ and ‘Before’)
  437 |           if (__g.key == __key) {
      |               ~~~~~~~ ^~ ~~~~~
      |                   |      |
      |                   Before Before
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:438:43: error: cannot convert ‘Inventory’ to ‘int’ in initialization
  438 |             __g.items.push_back(__struct6{inv, d});
      |                                           ^~~
      |                                           |
      |                                           Inventory
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:445:65: error: cannot convert ‘Inventory’ to ‘int’ in initialization
  445 |               __struct9{__key, std::vector<__struct6>{__struct6{inv, d}}});
      |                                                                 ^~~
      |                                                                 |
      |                                                                 Inventory
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:445:72: error: no matching function for call to ‘std::vector<__struct6>::vector(<brace-enclosed initializer list>)’
  445 |               __struct9{__key, std::vector<__struct6>{__struct6{inv, d}}});
      |                                                                        ^
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; std::__type_identity_t<_Alloc> = std::allocator<__struct6>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; std::__type_identity_t<_Alloc> = std::allocator<__struct6>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; size_type = long unsigned int; value_type = std::vector<__struct6>::value_type; allocator_type = std::allocator<__struct6>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; size_type = long unsigned int; allocator_type = std::allocator<__struct6>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = __struct6; _Alloc = std::allocator<__struct6>; allocator_type = std::allocator<__struct6>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = __struct6; _Alloc = std::allocator<__struct6>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:456:52: error: ‘struct __struct6’ has no member named ‘inv_quantity_on_hand’
  456 |                 decltype(std::declval<__struct6>().inv_quantity_on_hand)>
      |                                                    ^~~~~~~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:456:52: error: ‘struct __struct6’ has no member named ‘inv_quantity_on_hand’
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:456:73: error: template argument 1 is invalid
  456 |                 decltype(std::declval<__struct6>().inv_quantity_on_hand)>
      |                                                                         ^
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:456:73: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:459:23: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  459 |               __items.push_back(x.inv_quantity_on_hand);
      |                       ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:459:35: error: ‘struct __struct6’ has no member named ‘inv_quantity_on_hand’
  459 |               __items.push_back(x.inv_quantity_on_hand);
      |                                   ^~~~~~~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:2)> [with auto:2 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:454:13:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:453:38: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  453 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                    ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:453:49: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  453 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                               ~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:465:5: error: conversion from ‘vector<__struct8>’ to non-scalar type ‘vector<__struct6>’ requested
  426 |   std::vector<__struct6> after = ([&]() {
      |                                  ~~~~~~~~
  427 |     std::vector<__struct9> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  428 |     for (auto inv : inventory) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  429 |       for (auto d : date_dim) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~
  430 |         if (!((inv.inv_date_sk == d.d_date_sk)))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  431 |           continue;
      |           ~~~~~~~~~
  432 |         if (!((d.d_date >= std::string("2000-03-15"))))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  433 |           continue;
      |           ~~~~~~~~~
  434 |         auto __key = Before{inv.inv_warehouse_sk, inv.inv_item_sk};
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  435 |         bool __found = false;
      |         ~~~~~~~~~~~~~~~~~~~~~
  436 |         for (auto &__g : __groups) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  437 |           if (__g.key == __key) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~
  438 |             __g.items.push_back(__struct6{inv, d});
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  439 |             __found = true;
      |             ~~~~~~~~~~~~~~~
  440 |             break;
      |             ~~~~~~
  441 |           }
      |           ~
  442 |         }
      |         ~
  443 |         if (!__found) {
      |         ~~~~~~~~~~~~~~~
  444 |           __groups.push_back(
      |           ~~~~~~~~~~~~~~~~~~~
  445 |               __struct9{__key, std::vector<__struct6>{__struct6{inv, d}}});
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  446 |         }
      |         ~
  447 |       }
      |       ~
  448 |     }
      |     ~
  449 |     std::vector<__struct8> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  450 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  451 |       __items.push_back(__struct8{
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  452 |           g.key.w, g.key.i, ([&](auto v) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  453 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  454 |           })(([&]() {
      |           ~~~~~~~~~~~
  455 |             std::vector<
      |             ~~~~~~~~~~~~
  456 |                 decltype(std::declval<__struct6>().inv_quantity_on_hand)>
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  457 |                 __items;
      |                 ~~~~~~~~
  458 |             for (auto x : g.items) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~
  459 |               __items.push_back(x.inv_quantity_on_hand);
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  460 |             }
      |             ~
  461 |             return __items;
      |             ~~~~~~~~~~~~~~~
  462 |           })())});
      |           ~~~~~~~~
  463 |     }
      |     ~
  464 |     return __items;
      |     ~~~~~~~~~~~~~~~
  465 |   })();
      |   ~~^~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:470:19: error: ‘struct __struct6’ has no member named ‘w’
  470 |         if (!(((b.w == a.w) && (b.i == a.i))))
      |                   ^
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:470:26: error: ‘struct __struct6’ has no member named ‘w’
  470 |         if (!(((b.w == a.w) && (b.i == a.i))))
      |                          ^
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:470:35: error: ‘struct __struct6’ has no member named ‘i’
  470 |         if (!(((b.w == a.w) && (b.i == a.i))))
      |                                   ^
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:470:42: error: ‘struct __struct6’ has no member named ‘i’
  470 |         if (!(((b.w == a.w) && (b.i == a.i))))
      |                                          ^
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:473:40: error: ‘struct __struct6’ has no member named ‘w’
  473 |           if (!((w.w_warehouse_sk == b.w)))
      |                                        ^
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:476:38: error: ‘struct __struct6’ has no member named ‘i’
  476 |             if (!((it.i_item_sk == b.i)))
      |                                      ^
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:478:74: error: ‘struct __struct6’ has no member named ‘qty’
  478 |             __items.push_back(Joined{w.w_warehouse_name, it.i_item_id, b.qty,
      |                                                                          ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:479:40: error: ‘struct __struct6’ has no member named ‘qty’
  479 |                                      a.qty, (a.qty / b.qty)});
      |                                        ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:479:48: error: ‘struct __struct6’ has no member named ‘qty’
  479 |                                      a.qty, (a.qty / b.qty)});
      |                                                ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:479:56: error: ‘struct __struct6’ has no member named ‘qty’
  479 |                                      a.qty, (a.qty / b.qty)});
      |                                                        ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq211527840675/001/prog.cpp:492:24: error: no matching function for call to ‘std::vector<std::pair<int, Result> >::push_back(<brace-enclosed initializer list>)’
  492 |       __items.push_back({std::vector<decltype(r.w_name)>{r.w_name, r.i_id},
      |       ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  493 |                          Result{r.w_name, r.i_id, r.before_qty, r.after_qty}});
      |                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = std::pair<int, Result>; _Alloc = std::allocator<std::pair<int, Result> >; value_type = std::pair<int, Result>]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘const std::vector<std::pair<int, Result> >::value_type&’ {aka ‘const std::pair<int, Result>&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = std::pair<int, Result>; _Alloc = std::allocator<std::pair<int, Result> >; value_type = std::pair<int, Result>]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘std::vector<std::pair<int, Result> >::value_type&&’ {aka ‘std::pair<int, Result>&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
